Changes in the programming agents section of the manual

--- a/doc/manual/ProgrammingAgents/ProgrammingAgents.tex
+++ b/doc/manual/ProgrammingAgents/ProgrammingAgents.tex
@@ -154,7 +154,8 @@ Two appenders predefined for Magentix2 are showed in \ref{fig:Appender1} and \re
 
 \subsection{Connecting to the Qpid Broker}
 \label{subsec:connecting}
-A connection to the Qpid broker must be established before launching any agent. This connection will be used by agents to communicate with each other. At this point, it is  assumed that users have a Qpid broker running properly and the agents are launched without security.To employ connections with the security mode enabled, please refer to section \ref{sec:securityenable}.
+A connection to the Qpid broker must be established before launching any agent. This connection will be used by agents to communicate with each other. At this point, it is  assumed that users have a Qpid broker running properly and the agents are launched.
+% without security.To employ connections with the security mode enabled, please refer to section \ref{sec:securityenable}.
 
 The following parameters must be specified in any connection to the broker:
 
