--- a/doc/manual/Thomas/ThomasOverview.tex
+++ b/doc/manual/Thomas/ThomasOverview.tex
@@ -1337,8 +1337,7 @@ Following, we briefly explain the actions of the Organizational Message example 
   are received by the Summation agent.
 \item The Summation agent sends the sum of all results received ($15=15$) as an organizational message. This
   is received by the Display agent, which prints this value to standard output.
-\item To finalize this example, the scenary is disassembled. The Creator agent deallocates and deregisters
-  all the roles belonging to \textit{Calculator} organization and deregisters the organization. Simultaneously,
+\item To finalize this example, the scenary is disassembled. The Creator agent deregisters all the roles belonging to \textit{Calculator} organization and deregisters the organization. Simultaneously,
   the Noisy agent deallocates and deregisters all the roles belonging to the \textit{External} organization and
   deregisters the organization. All agents finalize their executions.
 \end{enumerate}
