User's Manual: removed references to MMS service at the platform administration section

--- a/doc/manual/Administration/PlatformAdminIntro.tex
+++ b/doc/manual/Administration/PlatformAdminIntro.tex
@@ -271,7 +271,9 @@ Finally, all available privileges for \textsc{Thomas} tables must be assigned to
 \section{Advanced Apache Tomcat}
 Apache Tomcat is a main component of Magentix2, because it allows to access to standard Java web services. If Apache Tomcat was installed during the Magentix2 Desktop version installation,  it will not be necessary to follow the steps shown here. On the other hand, this section helps to configure it properly.
 
-\textsc{Thomas}   platform   is   based   on   services (chapter \ref{chap:VirtualOrganizations}),   so   SF   and   OMS   service implementations have to be available as standard web services. Moreover, Magentix2 offers another service named MMS ( section \ref{sec:security}), which is responsible of controlling the user access to the platform.  This service must be also available as an standard web service. Any other user service (such as the application examples) need also to be available as standard web services. As mentioned above, Magentix2 uses Apache Tomcat to allow it. 
+\textsc{Thomas}   platform   is   based   on   services (chapter \ref{chap:VirtualOrganizations}),   so   SF   and   OMS   service implementations have to be available as standard web services.
+% Moreover, Magentix2 offers another service named MMS ( section \ref{sec:security}), which is responsible of controlling the user access to the platform.  This service must be also available as an standard web service.
+ Any other user service (such as the application examples) need also to be available as standard web services. As mentioned above, Magentix2 uses Apache Tomcat to allow it. 
 
 
 Apache Tomcat can be downloaded from: \url{http://tomcat.apache.org/}. The installation instructions can be found at: \url{http://tomcat.apache.org/tomcat-7.0-doc/setup.html}.
